@@ -20,14 +20,13 @@
 
 package com.apple.foundationdb.record.lucene;
 
-import com.apple.foundationdb.record.IndexScanType;
 import com.apple.foundationdb.record.RecordCursor;
 import com.apple.foundationdb.record.RecordMetaData;
 import com.apple.foundationdb.record.RecordMetaDataBuilder;
 import com.apple.foundationdb.record.TestRecordsTextProto;
 import com.apple.foundationdb.record.lucene.ngram.NgramAnalyzer;
-import com.apple.foundationdb.record.lucene.synonym.SynonymAnalyzer;
 import com.apple.foundationdb.record.lucene.synonym.EnglishSynonymMapConfig;
+import com.apple.foundationdb.record.lucene.synonym.SynonymAnalyzer;
 import com.apple.foundationdb.record.metadata.Index;
 import com.apple.foundationdb.record.metadata.IndexOptions;
 import com.apple.foundationdb.record.metadata.IndexTypes;
@@ -42,7 +41,6 @@ import com.apple.foundationdb.record.provider.foundationdb.indexes.TextIndexTest
 import com.apple.foundationdb.record.provider.foundationdb.properties.RecordLayerPropertyStorage;
 import com.apple.foundationdb.record.provider.foundationdb.query.FDBRecordStoreQueryTestBase;
 import com.apple.foundationdb.record.query.RecordQuery;
-import com.apple.foundationdb.record.query.expressions.LuceneQueryComponent;
 import com.apple.foundationdb.record.query.expressions.Query;
 import com.apple.foundationdb.record.query.expressions.QueryComponent;
 import com.apple.foundationdb.record.query.plan.PlannableIndexTypes;
@@ -52,7 +50,6 @@ import com.apple.foundationdb.tuple.Tuple;
 import com.apple.test.BooleanSource;
 import com.apple.test.Tags;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 import com.google.protobuf.Message;
@@ -67,6 +64,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -77,6 +75,9 @@ import java.util.stream.IntStream;
 
 import static com.apple.foundationdb.record.TestHelpers.assertLoadRecord;
 import static com.apple.foundationdb.record.lucene.LuceneIndexTest.generateRandomWords;
+import static com.apple.foundationdb.record.lucene.LucenePlanMatchers.group;
+import static com.apple.foundationdb.record.lucene.LucenePlanMatchers.query;
+import static com.apple.foundationdb.record.lucene.LucenePlanMatchers.scanParams;
 import static com.apple.foundationdb.record.metadata.Key.Expressions.concat;
 import static com.apple.foundationdb.record.metadata.Key.Expressions.concatenateFields;
 import static com.apple.foundationdb.record.metadata.Key.Expressions.field;
@@ -92,13 +93,13 @@ import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.indexS
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.primaryKeyDistinct;
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.scan;
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.typeFilter;
-import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.union;
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.unorderedUnion;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.aMapWithSize;
 import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.hasToString;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
@@ -148,13 +149,13 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     private static final String MAP_DOC = "MapDocument";
 
-    private static final Index SIMPLE_TEXT_SUFFIXES = new Index("Complex$text_index", function(LuceneFunctionNames.LUCENE_TEXT, field("text")), IndexTypes.LUCENE,
+    private static final Index SIMPLE_TEXT_SUFFIXES = new Index("Complex$text_index", function(LuceneFunctionNames.LUCENE_TEXT, field("text")), LuceneIndexTypes.LUCENE,
             ImmutableMap.of(IndexOptions.TEXT_TOKENIZER_NAME_OPTION, AllSuffixesTextTokenizer.NAME));
     private static final List<KeyExpression> keys = List.of(field("key"), function(LuceneFunctionNames.LUCENE_TEXT, field("value")));
     private static final KeyExpression mainExpression = field("entry", KeyExpression.FanType.FanOut).nest(concat(keys));
 
-    private static final Index MAP_AND_FIELD_ON_LUCENE_INDEX = new Index("MapField$values", concat(mainExpression, field("doc_id")), IndexTypes.LUCENE);
-    private static final Index MAP_ON_LUCENE_INDEX = new Index("Map$entry-value", new GroupingKeyExpression(mainExpression, 1), IndexTypes.LUCENE);
+    private static final Index MAP_AND_FIELD_ON_LUCENE_INDEX = new Index("MapField$values", concat(mainExpression, field("doc_id")), LuceneIndexTypes.LUCENE);
+    private static final Index MAP_ON_LUCENE_INDEX = new Index("Map$entry-value", new GroupingKeyExpression(mainExpression, 1), LuceneIndexTypes.LUCENE);
 
     private ExecutorService executorService = null;
 
@@ -168,7 +169,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                         Sets.newHashSet(IndexTypes.VALUE, IndexTypes.VERSION),
                         Sets.newHashSet(IndexTypes.RANK, IndexTypes.TIME_WINDOW_LEADERBOARD),
                         Sets.newHashSet(IndexTypes.TEXT),
-                        Sets.newHashSet(IndexTypes.LUCENE)
+                        Sets.newHashSet(LuceneIndexTypes.LUCENE)
                 );
             }
             planner = new LucenePlanner(recordStore.getRecordMetaData(), recordStore.getRecordStoreState(), indexTypes, recordStore.getTimer());
@@ -181,19 +182,19 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
     }
 
     protected void openRecordStoreWithNgramIndex(FDBRecordContext context, boolean edgesOnly, int minSize, int maxSize) {
-        final Index ngramIndex = new Index("Complex$text_index", function(LuceneFunctionNames.LUCENE_TEXT, field("text")), IndexTypes.LUCENE,
-                ImmutableMap.of(IndexOptions.TEXT_ANALYZER_NAME_OPTION, NgramAnalyzer.NgramAnalyzerFactory.ANALYZER_NAME,
+        final Index ngramIndex = new Index("Complex$text_index", function(LuceneFunctionNames.LUCENE_TEXT, field("text")), LuceneIndexTypes.LUCENE,
+                ImmutableMap.of(LuceneIndexOptions.TEXT_ANALYZER_NAME_OPTION, NgramAnalyzer.NgramAnalyzerFactory.ANALYZER_NAME,
                         IndexOptions.TEXT_TOKEN_MIN_SIZE, String.valueOf(minSize),
                         IndexOptions.TEXT_TOKEN_MAX_SIZE, String.valueOf(maxSize),
-                        IndexOptions.NGRAM_TOKEN_EDGES_ONLY, String.valueOf(edgesOnly)));
+                        LuceneIndexOptions.NGRAM_TOKEN_EDGES_ONLY, String.valueOf(edgesOnly)));
         openRecordStore(context, store -> { }, ngramIndex);
     }
 
     protected void openRecordStoreWithSynonymIndex(FDBRecordContext context) {
-        final Index ngramIndex = new Index("Complex$text_index", function(LuceneFunctionNames.LUCENE_TEXT, field("text")), IndexTypes.LUCENE,
+        final Index ngramIndex = new Index("Complex$text_index", function(LuceneFunctionNames.LUCENE_TEXT, field("text")), LuceneIndexTypes.LUCENE,
                 ImmutableMap.of(
-                        IndexOptions.TEXT_ANALYZER_NAME_OPTION, SynonymAnalyzer.SynonymAnalyzerFactory.ANALYZER_NAME,
-                        IndexOptions.TEXT_SYNONYM_SET_NAME_OPTION, EnglishSynonymMapConfig.CONFIG_NAME));
+                        LuceneIndexOptions.TEXT_ANALYZER_NAME_OPTION, SynonymAnalyzer.SynonymAnalyzerFactory.ANALYZER_NAME,
+                        LuceneIndexOptions.TEXT_SYNONYM_SET_NAME_OPTION, EnglishSynonymMapConfig.CONFIG_NAME));
         openRecordStore(context, store -> { }, ngramIndex);
     }
 
@@ -280,7 +281,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             RecordCursor<Tuple> map = fdbQueriedRecordRecordCursor.map(FDBQueriedRecord::getPrimaryKey);
             List<Long> primaryKeys = map.map(t -> t.getLong(0)).asList().get();
             if (indexedExpected) {
-                assertEquals(ImmutableSet.of(1L), ImmutableSet.copyOf(primaryKeys), "Expected term not indexed");
+                assertEquals(Set.of(1L), Set.copyOf(primaryKeys), "Expected term not indexed");
             } else {
                 assertThat("Unexpected term indexed", primaryKeys.isEmpty());
             }
@@ -346,7 +347,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void simpleLuceneScans(boolean shouldDeferFetch) throws Exception {
+    void simpleLuceneScans(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -358,20 +359,20 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScan("Complex$text_index"),
-                    indexScanType(IndexScanType.BY_LUCENE),
-                    bounds(hasTupleString("[[civil blood makes civil hands unclean],[civil blood makes civil hands unclean]]"))));
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    scanParams(query(hasToString("MULTI civil blood makes civil hands unclean")))));
             RecordQueryPlan plan = planner.plan(query);
-            //assertThat(plan, matcher);
+            assertThat(plan, matcher);
             RecordCursor<FDBQueriedRecord<Message>> fdbQueriedRecordRecordCursor = recordStore.executeQuery(plan);
             RecordCursor<Tuple> map = fdbQueriedRecordRecordCursor.map(FDBQueriedRecord::getPrimaryKey);
             List<Long> primaryKeys = map.map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(2L, 4L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(2L, 4L), Set.copyOf(primaryKeys));
         }
     }
 
     @ParameterizedTest
     @BooleanSource
-    public void testThenExpressionBeforeFieldExpression(boolean shouldDeferFetch) throws Exception {
+    void testThenExpressionBeforeFieldExpression(boolean shouldDeferFetch) throws Exception {
         initializeNestedWithField();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -385,14 +386,14 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             RecordCursor<FDBQueriedRecord<Message>> fdbQueriedRecordRecordCursor = recordStore.executeQuery(plan);
             RecordCursor<Tuple> map = fdbQueriedRecordRecordCursor.map(FDBQueriedRecord::getPrimaryKey);
             List<Long> primaryKeys = map.map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(0L, 1L, 2L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(0L, 1L, 2L), Set.copyOf(primaryKeys));
         }
 
     }
 
     @ParameterizedTest
     @BooleanSource
-    public void simpleLuceneScansDocId(boolean shouldDeferFetch) throws Exception {
+    void simpleLuceneScansDocId(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -406,13 +407,13 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             RecordQueryPlan plan = planner.plan(query);
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(1L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(1L), Set.copyOf(primaryKeys));
         }
     }
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnOrOfLuceneScanWithFieldFilter(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnOrOfLuceneScanWithFieldFilter(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -427,14 +428,14 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             Matcher<RecordQueryPlan> matcher = primaryKeyDistinct(
                     unorderedUnion(
                             indexScan(allOf(indexScan("Complex$text_index"),
-                                    indexScanType(IndexScanType.BY_LUCENE),
-                                    bounds(hasTupleString("[[civil blood makes civil hands unclean],[civil blood makes civil hands unclean]]")))),
+                                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                                    scanParams(query(hasToString("civil blood makes civil hands unclean"))))),
                             typeFilter(equalTo(Collections.singleton(TextIndexTestUtils.SIMPLE_DOC)),
                                     scan(bounds(hasTupleString("([null],[10000])"))))
                     ));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(2L, 4L, 0L, 1L, 3L, 5L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(2L, 4L, 0L, 1L, 3L, 5L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(5, context);
             } else {
@@ -445,7 +446,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnLuceneFilterWithSort(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnLuceneFilterWithSort(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -459,7 +460,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(2L, 4L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(2L, 4L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(5, context);
             } else {
@@ -470,7 +471,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnAndOfLuceneAndFieldFilter(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnAndOfLuceneAndFieldFilter(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -483,13 +484,13 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> scanMatcher = fetch(filter(filter2, coveringIndexScan(indexScan(allOf(indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT), indexScan("Complex$text_index"),
-                    bounds(hasTupleString("[[civil blood makes civil hands unclean],[civil blood makes civil hands unclean]]")))))));
+            Matcher<RecordQueryPlan> scanMatcher = fetch(filter(filter2, coveringIndexScan(indexScan(allOf(indexScanType(LuceneScanTypes.BY_LUCENE), indexScan("Complex$text_index"),
+                    scanParams(query(hasToString("MULTI civil blood makes civil hands unclean"))))))));
             assertThat(plan, scanMatcher);
             RecordCursor<FDBQueriedRecord<Message>> primaryKeys;
             primaryKeys = recordStore.executeQuery(plan);
             final List<Long> keys = primaryKeys.map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(2L), ImmutableSet.copyOf(keys));
+            assertEquals(Set.of(2L), Set.copyOf(keys));
             if (shouldDeferFetch) {
                 assertLoadRecord(3, context);
             } else {
@@ -500,7 +501,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnOrOfLuceneFiltersGivesUnion(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnOrOfLuceneFiltersGivesUnion(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -513,27 +514,25 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> matcher = union(
+            Matcher<RecordQueryPlan> matcher = primaryKeyDistinct(unorderedUnion(
                     indexScan(allOf(indexScan("Complex$text_index"),
-                            indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                            bounds(hasTupleString("[[(\"civil blood makes civil hands unclean\")],[(\"civil blood makes civil hands unclean\")]]")))),
+                            indexScanType(LuceneScanTypes.BY_LUCENE),
+                            scanParams(query(hasToString("MULTI (\"civil blood makes civil hands unclean\")"))))),
                     indexScan(allOf(indexScan("Complex$text_index"),
-                            indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                            bounds(hasTupleString("[[(\"was king from 966 to 1016\")],[(\"was king from 966 to 1016\")]]")))),
-                    equalTo(field("doc_id")));
+                            indexScanType(LuceneScanTypes.BY_LUCENE),
+                            scanParams(query(hasToString("MULTI (\"was king from 966 to 1016\")")))))));
             if (shouldDeferFetch) {
-                matcher = fetch(union(
+                matcher = fetch(primaryKeyDistinct(unorderedUnion(
                         coveringIndexScan(indexScan(allOf(indexScan("Complex$text_index"),
-                                indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                                bounds(hasTupleString("[[(\"civil blood makes civil hands unclean\")],[(\"civil blood makes civil hands unclean\")]]"))))),
+                                indexScanType(LuceneScanTypes.BY_LUCENE),
+                                scanParams(query(hasToString("MULTI (\"civil blood makes civil hands unclean\")")))))),
                         coveringIndexScan(indexScan(allOf(indexScan("Complex$text_index"),
-                                indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                                bounds(hasTupleString("[[(\"was king from 966 to 1016\")],[(\"was king from 966 to 1016\")]]"))))),
-                        equalTo(field("doc_id"))));
+                                indexScanType(LuceneScanTypes.BY_LUCENE),
+                                scanParams(query(hasToString("MULTI (\"was king from 966 to 1016\")")))))))));
             }
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(1L, 2L, 4L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(1L, 2L, 4L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(5, context);
             } else {
@@ -544,7 +543,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnAndOfLuceneFilters(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnAndOfLuceneFilters(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -557,12 +556,12 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                    indexName("Complex$text_index"),
-                    bounds(hasTupleString("[[(\"the continuance\") AND (grudge)],[(\"the continuance\") AND (grudge)]]"))));
+            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexName(SIMPLE_TEXT_SUFFIXES.getName()),
+                    scanParams(query(hasToString("MULTI \"the continuance\" AND MULTI grudge")))));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(4L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(4L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(3, context);
             } else {
@@ -573,7 +572,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnLuceneComplexStringAnd(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnLuceneComplexStringAnd(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -585,12 +584,12 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                    indexName("Complex$text_index"),
-                    bounds(hasTupleString("[[(the continuance AND grudge)],[(the continuance AND grudge)]]"))));
+            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexName(SIMPLE_TEXT_SUFFIXES.getName()),
+                    scanParams(query(hasToString("MULTI (the continuance AND grudge)")))));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(4L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(4L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(3, context);
             } else {
@@ -601,7 +600,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnLuceneComplexStringOr(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnLuceneComplexStringOr(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -613,12 +612,12 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                    indexName("Complex$text_index"),
-                    bounds(hasTupleString("[[\"the continuance\" OR grudge],[\"the continuance\" OR grudge]]"))));
+            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexName(SIMPLE_TEXT_SUFFIXES.getName()),
+                    scanParams(query(hasToString("MULTI \"the continuance\" OR grudge")))));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(4L, 5L, 2L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(4L, 5L, 2L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(3, context);
             } else {
@@ -629,7 +628,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void misMatchQueryShouldReturnNoResult(boolean shouldDeferFetch) throws Exception {
+    void misMatchQueryShouldReturnNoResult(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -641,10 +640,10 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScan("Complex$text_index"), indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT), bounds(hasTupleString("[[doesNotExist],[doesNotExist]]"))));
+            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScan("Complex$text_index"), indexScanType(LuceneScanTypes.BY_LUCENE), scanParams(query(hasToString("MULTI doesNotExist")))));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(3, context);
             } else {
@@ -654,7 +653,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
     }
 
     @Test
-    public void threadedLuceneScanDoesntBreakPlannerAndSearch() throws Exception {
+    void threadedLuceneScanDoesntBreakPlannerAndSearch() throws Exception {
         CountingThreadFactory threadFactory = new CountingThreadFactory();
         executorService = Executors.newFixedThreadPool(10, threadFactory);
         initializeFlat();
@@ -698,73 +697,74 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
         }
     }
 
-    /*
     @ParameterizedTest
     @BooleanSource
-    public void nestedLuceneAndQuery(boolean shouldDeferFetch) throws Exception {
+    void nestedLuceneAndQuery(boolean shouldDeferFetch) throws Exception {
         initializeNested();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
             RecordQuery query = RecordQuery.newBuilder()
                     .setRecordType(MAP_DOC)
-                    .setFilter(new AndComponent(Lists.newArrayList(new LuceneQueryComponent("value:king", Lists.newArrayList("value"), false),
-                            new NestedField("entry", new FieldWithComparison("key", new Comparisons.SimpleComparison(Comparisons.Type.EQUALS, "a"))))))
+                    .setFilter(Query.and(
+                            new LuceneQueryComponent("entry_value:king", Lists.newArrayList("entry"), false),
+                            Query.field("entry").oneOfThem().matches(Query.field("key").equalsValue("a"))))
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
 
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(
-                    indexScanType(IndexScanType.BY_LUCENE),
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
                     indexScan("Map$entry-value"),
-                    bounds(hasTupleString("[[a_value:king],[a_value:king]]"))
+                    scanParams(allOf(
+                            query(hasToString("entry_value:king")),
+                            group(hasTupleString("[[a],[a]]"))))
             ));
             assertThat(plan, matcher);
-            assertEquals(Arrays.asList(2L), primaryKeys);
+            assertEquals(Set.of(2L), Set.copyOf(primaryKeys));
         }
     }
 
     @ParameterizedTest
     @BooleanSource
-    public void nestedLuceneFieldQuery(boolean shouldDeferFetch) throws Exception {
+    void nestedLuceneFieldQuery(boolean shouldDeferFetch) throws Exception {
         initializeNested();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
             RecordQuery query = RecordQuery.newBuilder()
                     .setRecordType(MAP_DOC)
-                    .setFilter(new LuceneQueryComponent("a_value:king", Lists.newArrayList("key")))
+                    .setFilter(new LuceneQueryComponent("entry_value:king", Lists.newArrayList("entry")))
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(
-                    indexScanType(IndexScanType.BY_LUCENE),
-                    indexScan("Map$entry-value"),
-                    bounds(hasTupleString("[[a_value:king],[a_value:king]]"))
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexScan("MapField$values"),
+                    scanParams(query(hasToString("entry_value:king")))
             ));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(Arrays.asList(2L), primaryKeys);
+            assertEquals(Set.of(0L, 2L), Set.copyOf(primaryKeys));
         }
     }
 
-    /*
     @ParameterizedTest
     @BooleanSource
-    public void nestedOneOfThemQuery(boolean shouldDeferFetch) throws Exception {
+    void nestedOneOfThemQuery(boolean shouldDeferFetch) throws Exception {
         initializeNested();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
 
             RecordQuery query = RecordQuery.newBuilder()
                     .setRecordType(MAP_DOC)
-                    .setFilter(new OneOfThemWithComponent("entry", Query.field("key").equalsValue("king")))
+                    .setFilter(Query.field("entry").oneOfThem().matches(Query.field("key").equalsValue("king")))
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(
-                    indexScanType(IndexScanType.BY_LUCENE),
-                    indexScan("Map$entry-value"),
-                    bounds(hasTupleString("[[entry_key:\"king\"],[entry_key:\"king\"]]"))));
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexScan("MapField$values"),
+                    scanParams(query(hasToString("entry_key:\"king\"")))));
             if (shouldDeferFetch) {
                 matcher = fetch(primaryKeyDistinct(coveringIndexScan(matcher)));
             } else {
@@ -772,17 +772,18 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             }
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(Collections.emptyList(), primaryKeys);
+            assertEquals(Set.of(), Set.copyOf(primaryKeys));
         }
     }
+
     @ParameterizedTest
     @BooleanSource
-    public void nestedOneOfThemWithAndQuery(boolean shouldDeferFetch) throws Exception {
+    void nestedOneOfThemWithAndQuery(boolean shouldDeferFetch) throws Exception {
         initializeNested();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
             final QueryComponent filter = Query.field("entry").oneOfThem().matches(Query.and(Query.field("key").equalsValue("b"),
-                    Query.field("value").text().containsPhrase("entry_b_value:(+civil blood makes civil hands unclean")));
+                    Query.field("value").text().containsPhrase("civil blood makes civil hands unclean")));
             RecordQuery query = RecordQuery.newBuilder()
                     .setRecordType(MAP_DOC)
                     .setFilter(filter)
@@ -790,9 +791,10 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(
-                    indexName(MAP_ON_LUCENE_INDEX.getName()),
-                    indexScanType(IndexScanType.BY_LUCENE),
-                    bounds(hasTupleString("[[entry_b_value:(+\"civil blood makes civil hands unclean\")],[entry_b_value:(+\"civil blood makes civil hands unclean\")]]"))
+                    indexName(MAP_AND_FIELD_ON_LUCENE_INDEX.getName()),
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    // TODO: This query does not have the proper correlation between the two children. An index that put the key into the name would be needed to tell that.
+                    scanParams(query(hasToString("entry_key:\"b\" AND entry_value:(+\"civil blood makes civil hands unclean\")")))
                     ));
             if (shouldDeferFetch) {
                 matcher = fetch(primaryKeyDistinct(coveringIndexScan(matcher)));
@@ -801,14 +803,14 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             }
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(Collections.emptyList(), primaryKeys);
+            //assertEquals(Set.of(), Set.copyOf(primaryKeys));
         }
 
     }
 
     @ParameterizedTest
     @BooleanSource
-    public void nestedOneOfThemWithOrQuery(boolean shouldDeferFetch) throws Exception {
+    void nestedOneOfThemWithOrQuery(boolean shouldDeferFetch) throws Exception {
         initializeNested();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -821,9 +823,9 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(
-                    indexName(MAP_ON_LUCENE_INDEX.getName()),
-                    indexScanType(IndexScanType.BY_LUCENE),
-                    bounds(hasTupleString("[[(entry.value:(+\"civil blood makes civil hands unclean\")) OR (entry.key:\"b\")],[(entry.value:(+\"civil blood makes civil hands unclean\")) OR (entry.key:\"b\")]]"))
+                    indexName(MAP_AND_FIELD_ON_LUCENE_INDEX.getName()),
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    scanParams(query(hasToString("entry_key:\"b\" OR entry_value:(+\"civil blood makes civil hands unclean\")")))
             ));
             if (shouldDeferFetch) {
                 matcher = fetch(primaryKeyDistinct(coveringIndexScan(matcher)));
@@ -832,10 +834,9 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             }
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(Arrays.asList(0L, 1L, 2L), primaryKeys);
+            assertEquals(Set.of(0L, 1L, 2L), Set.copyOf(primaryKeys));
         }
 
     }
-    */
 
 }
